# mashup

./: .env-example  .gitignore  CONCEPT.md  IMPLEMENTATION.md  README.md  pyproject.toml
src/mashup/: ai.py  audio_download.py  beat_detection.py  beat_utils.py  cli.py  feature_extraction.py  log.py  mix_planning.py  mixdown.py  models.py  pipeline.py  time_stretch.py  track_selection.py
src/mashup/prompts/: mix_planning.md  track_selection.md
